--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "build:dev": "npm run build && node --require dotenv/config ./dist/index.js",
-    "dev": "ts-node --require dotenv/config ./index.ts"
+    "build:dev": "npm run build && node --require dotenv/config ./dist/main.js",
+    "dev": "ts-node --require dotenv/config ./main.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.4",
+    "prettier": "3.5.1",
     "tsc": "^2.0.4"
   }
 }
